--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -41,7 +41,7 @@
 <!-- Existing HTML structure remains unchanged -->
 
 <script>
-  // THIS IS A TEST
+  // THIS IS A TEST 02
   // Immediately execute the chatbot initialization code
   (function() {
     console.log("Chatbot initialized.");
