--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -1,3 +1,4 @@
+<!-- TEST 05 -->
 <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
@@ -41,7 +42,6 @@
 <!-- Existing HTML structure remains unchanged -->
 
 <script>
-  // THIS IS A TEST 04
   // Immediately execute the chatbot initialization code
   (function() {
     console.log("Chatbot initialized.");
