--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -75,6 +75,12 @@
     const conversationWrapper = document.getElementById("chat_conversation-wrapper");
     const chatInputWrapper = document.querySelector(".chat_input-wrapper");
 
+    // Define URL parameters and extract conversationID once
+    const urlParams = new URLSearchParams(window.location.search);
+    const conversationID = urlParams.get('conversationID');
+    console.log("Extracted conversation ID:", conversationID);
+
+
     // Function to fetch and log conversation messages
     async function fetchConversationMessages(conversationID) {
       if (!conversationID) {
