--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -23,7 +23,7 @@
             <div id="w-node-_819b1fcb-bef5-c69d-b33b-f104bd5e9695-8f158f72" class="chat_input-text">
               <div id="w-node-_256faa1f-1943-6b85-6f8e-bd7a8a4af011-8f158f72" class="code-embed-2 w-embed">
                 <div class="form-input is-app">
-                  <textarea id="chat-user-input" class="textarea-dynamic" placeholder="Type your message here..."></textarea>
+                  <textarea id="chat-user-input" class="textarea-dynamic" rows="1" placeholder="Type your message here..."></textarea>
                   <div id="hidden-div"></div>
                 </div>
               </div>
