--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -203,7 +203,7 @@
     async function saveConversationToAirtable(metadata) {
       const conversationsTableUrl = 'https://api.airtable.com/v0/app2N6x5jeRnIzSpL/Conversations';
       const airtableHeaders = {
-        Authorization: 'Bearer YOUR_AIRTABLE_API_KEY',
+        Authorization: 'Bearer patTeuxUuzgG0ZU8Q.2eb9ff7f31afe3e06f3c128c5b5b832bcc4e4e85bd58a5007a8368f218d28b83',
         'Content-Type': 'application/json',
       };
     
