--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -83,7 +83,7 @@
     async function updateTimeLastEdited(recordId) {
       const airtableBaseUrl = 'https://api.airtable.com/v0/app2N6x5jeRnIzSpL/Conversations';
       const airtableHeaders = {
-        Authorization: 'Bearer YOUR_AIRTABLE_API_KEY', // Replace with your actual API key
+        Authorization: 'Bearer patTeuxUuzgG0ZU8Q.2eb9ff7f31afe3e06f3c128c5b5b832bcc4e4e85bd58a5007a8368f218d28b83', // Replace with your actual API key
         'Content-Type': 'application/json',
       };
     
