--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -1,42 +1,50 @@
-
 <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
-  <div class="chat-bot_styles w-embed">
-  </div>
-  <div class="page-wrapper is-app is-ami">
-    <div class="main-wrapper">
-      <div class="shell15_wrapper">
-        <main class="shell15_main-wrapper">
-          <div id="chat_conversation-wrapper" class="chat_conversation-wrapper"></div>
-          <div class="chat_input-wrapper">
-            <div id="w-node-_65169329-54c4-8195-cf7f-c09cde35a8e3-8f158f72" class="chat_input-file">
-              <div class="icon-embed-small w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                  <path fill="currentColor" d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5a2.5 2.5 0 0 1 5 0v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5a2.5 2.5 0 0 0 5 0V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6z"></path>
-                </svg></div>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+<div class="chat-bot_styles w-embed">
+</div>
+<div class="page-wrapper is-app is-ami">
+  <div class="main-wrapper">
+    <div class="shell15_wrapper">
+      <main class="shell15_main-wrapper">
+        <div id="chat_conversation-wrapper" class="chat_conversation-wrapper"></div>
+        <div class="chat_input-wrapper">
+          <div id="w-node-_65169329-54c4-8195-cf7f-c09cde35a8e3-8f158f72" class="chat_input-file">
+            <div class="icon-embed-small w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5a2.5 2.5 0 0 1 5 0v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5a2.5 2.5 0 0 0 5 0V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6z"></path>
+              </svg></div>
+          </div>
+          <div id="chat-user-input-mic" class="chat_input-file w-node-d52fb02a-d5b0-6fa8-115b-d486e3e4b322-8f158f72">
+            <div class="icon-embed-small w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3m-1.2-9.1c0-.66.54-1.2 1.2-1.2s1.2.54 1.2 1.2l-.01 6.2c0 .66-.53 1.2-1.19 1.2s-1.2-.54-1.2-1.2zm6.5 6.1c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.41 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72z"></path>
+              </svg></div>
+          </div>
+          <div id="chat-voice-toggle" class="chat_input-file">
+            <div class="icon-embed-small w-embed">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M10 5c0-1.66 1.34-3 3-3s3 1.34 3 3v6c0 1.66-1.34 3-3 3s-3-1.34-3-3V5zm9 6c0 3.87-3.13 7-7 7s-7-3.13-7-7h-2c0 4.97 4.03 9 9 9s9-4.03 9-9h-2z"></path>
+              </svg>
             </div>
-            <div id="chat-user-input-mic" class="chat_input-file w-node-d52fb02a-d5b0-6fa8-115b-d486e3e4b322-8f158f72">
-              <div class="icon-embed-small w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                  <path fill="currentColor" d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3m-1.2-9.1c0-.66.54-1.2 1.2-1.2s1.2.54 1.2 1.2l-.01 6.2c0 .66-.53 1.2-1.19 1.2s-1.2-.54-1.2-1.2zm6.5 6.1c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.41 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72z"></path>
-                </svg></div>
-            </div>
-            <div id="w-node-_819b1fcb-bef5-c69d-b33b-f104bd5e9695-8f158f72" class="chat_input-text">
-              <div id="w-node-_256faa1f-1943-6b85-6f8e-bd7a8a4af011-8f158f72" class="code-embed-2 w-embed">
-                <div class="form-input is-app">
-                  <textarea id="chat-user-input" class="textarea-dynamic" rows="1" placeholder="Type your message here..."></textarea>
-                </div>
+          </div>
+          <div id="w-node-_819b1fcb-bef5-c69d-b33b-f104bd5e9695-8f158f72" class="chat_input-text">
+            <div id="w-node-_256faa1f-1943-6b85-6f8e-bd7a8a4af011-8f158f72" class="code-embed-2 w-embed">
+              <div class="form-input is-app">
+                <textarea id="chat-user-input" class="textarea-dynamic" rows="1" placeholder="Type your message here..."></textarea>
               </div>
             </div>
-            <div id="chat-user-submit" class="button is-app w-node-_4bf83d64-1477-4e83-8a98-23560ff07d2d-8f158f72 w-inline-block" draggable="false">
-              <div class="chat_submit-input w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                  <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 12L3.269 3.125A59.8 59.8 0 0 1 21.486 12a59.8 59.8 0 0 1-18.217 8.875zm0 0h7.5"></path>
-                </svg></div>
-            </a>
           </div>
-        </main>
-      </div>
+          <div id="chat-user-submit" class="button is-app w-node-_4bf83d64-1477-4e83-8a98-23560ff07d2d-8f158f72 w-inline-block" draggable="false">
+            <div class="chat_submit-input w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 12L3.269 3.125A59.8 59.8 0 0 1 21.486 12a59.8 59.8 0 0 1-18.217 8.875zm0 0h7.5"></path>
+              </svg></div>
+          </div>
+        </div>
+      </main>
     </div>
   </div>
+</div>
+
+
 
 <!-- Existing HTML structure remains unchanged -->
 
