--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -1293,7 +1293,7 @@
       const currentTime = new Date().toLocaleString();
       let initialMessage = `conversation_name=${currentTime}, current_username=${name}, current_user_email=${email}`;
       if (agentInfo) {
-        initialMessage += `, agent_info=${agentInfo}`;
+        initialMessage += `, additional_info=${agentInfo}`;
       }
       console.log("Sending initial message to AI:", initialMessage);
 
