--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -89,6 +89,14 @@
 
     let isBusy = false; // NEW: Blocks user while AI is responding
 
+    // CUSTOM MARKED RENDERER: Forces all links to open in a new tab
+    const customRenderer = new marked.Renderer();
+    customRenderer.link = function(href, title, text) {
+      const titleAttr = title ? ` title="${title}"` : '';
+      return `<a href="${href}"${titleAttr} target="_blank" rel="noopener noreferrer">${text}</a>`;
+    };
+
+
     function markdownToPlainText(markdown) {
       // 1) Parse to HTML
       const html = marked.parse(markdown);
