--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -89,17 +89,13 @@
 
     let isBusy = false; // NEW: Blocks user while AI is responding
 
-    // Declare customRenderer as a global variable.
-    var customRenderer;
-    
-    document.addEventListener("DOMContentLoaded", function() {
-      // NEW: Define and assign the custom marked renderer after DOM is loaded.
-      customRenderer = new marked.Renderer();
-      customRenderer.link = function(href, title, text) {
-        const titleAttr = title ? ` title="${title}"` : '';
-        return `<a href="${href}"${titleAttr} target="_blank" rel="noopener noreferrer">${text}</a>`;
-      };
-    });
+    // NEW: Define the custom marked renderer immediately (since marked is already loaded)
+    var customRenderer = new marked.Renderer();
+    customRenderer.link = function(href, title, text) {
+      const titleAttr = title ? ` title="${title}"` : '';
+      return `<a href="${href}"${titleAttr} target="_blank" rel="noopener noreferrer">${text}</a>`;
+    };
+
 
 
 
