--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -944,11 +944,13 @@
         optionDiv.appendChild(optionHeading);
         optionContainer.appendChild(optionDiv);
     
-        // New behavior: Append option text to the user's input without submitting
+        // New behavior: Append option text to the user's input without submitting,
+        // and add the 'is-chosen' class to mark it as selected.
         optionDiv.addEventListener("click", () => {
           const userInput = document.getElementById("chat-user-input");
           userInput.value += `${optionText}\n`;
           adjustHeight();
+          optionDiv.classList.add("is-chosen");
         });
     
         // Append the container to the chat block
@@ -959,6 +961,7 @@
       chatBlockWrapper.appendChild(chatBlock);
       conversationWrapper.appendChild(chatBlockWrapper);
     }
+
 
 
 
