--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -934,7 +934,8 @@
         optionContainer.className = "chat_multi-choice-container";
         optionContainer.style.display = "flex";
         optionContainer.style.alignItems = "center";
-        optionContainer.style.justifyContent = "space-between";
+        optionContainer.style.justifyContent = "flex-start"; // Aligns items to the left
+
     
         // Create the main clickable option button (Left side)
         const optionDiv = document.createElement("div");
