--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -964,10 +964,9 @@
         sendBtn.style.display = "flex";
         sendBtn.style.alignItems = "center";
         sendBtn.style.justifyContent = "center";
-        sendBtn.style.marginLeft = "4%"; // adjust spacing between buttons
     
         // Set inner HTML with the provided SVG icon and rotate it -53°
-        sendBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="transform: rotate(-53deg);"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 12L3.269 3.125A59.8 59.8 0 0 1 21.486 12a59.8 59.8 0 0 1-18.217 8.875zm0 0h7.5"></path></svg>`;
+        sendBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 12L3.269 3.125A59.8 59.8 0 0 1 21.486 12a59.8 59.8 0 0 1-18.217 8.875zm0 0h7.5"></path></svg>`;
     
         // Event listener for the send button: send the message directly to the AI
         sendBtn.addEventListener("click", (event) => {
