--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -940,7 +940,7 @@
         // Create the main clickable option button (Left side)
         const optionDiv = document.createElement("div");
         optionDiv.className = "chat_multi-choice-option";
-        optionDiv.style.width = "76%"; // maintain existing width
+        optionDiv.style.width = "60%";
         const optionHeading = document.createElement("span");
         optionHeading.className = "chat-button-text";
         optionHeading.style.fontWeight = "bold";
@@ -959,8 +959,8 @@
         const sendBtn = document.createElement("div");
         sendBtn.className = "chat_multi-choice-send";
         // Optionally, use fixed size (or a percentage) for a square button
-        sendBtn.style.width = "50px";
-        sendBtn.style.height = "50px";
+        sendBtn.style.width = "47px";
+        sendBtn.style.height = "47px";
         sendBtn.style.display = "flex";
         sendBtn.style.alignItems = "center";
         sendBtn.style.justifyContent = "center";
